[package]
name = "mdns-sd-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"

gethostname ="0.5"
if-addrs = "0.13"
mdns-sd = { git = "https://github.com/keepsimple1/mdns-sd", branch = "debug-test"}
